--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-pip install lyricsgenius
-pip install termcolor
-pip install urllib3
-pip install sys
-pip install requests
-pip install json
-pip install random
+lyricsgenius
+termcolor
+urllib3
+requests
